[#12056] use data on identifierPath for GridRow.id
Selection now keeps selected rows by data value, which is much nicer
behaviour.. One more thing is missing: if setData updates rows, and
current selection is outside of current page, we will keep old
selection. Soon to be fixed!

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -215,9 +215,11 @@ components:
           type: string
           format: uri
           description: The uri of the table data that contains the data of the list.
-        propertyPath:
-          type: string
-          description: The property path to access the data of the grid in the referred object.
+        identifierPath:
+          type: array
+          items:
+            type: string
+          description: The path to access the identifier GridRow.data
         apiClass:
           type: string
         kind:
