--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -31,10 +31,15 @@ components:
             object:/com/smartbit4all/mydomain/model/MyObject could be a calculated URI for a given reference. The object definition
         qualifiedName:
           type: string
-        keyProperty:
+        uriProperty:
           type: string
           description: |
             The name of the uri property that is the referential resource identifier for the object instances. Normally it is the
+            uri but if the object does not have uri (identity in the storage level) then it can be the unique identifier or code also. 
+        keyProperty:
+          type: string
+          description: |
+            The name of the business identifier property that identifies the object instances. Normally it is the
             uri but if the object does not have uri (identity in the storage level) then it can be the unique identifier or code also. 
         properties:
           type: array
