--- a/api-domain/src/main/resources/descriptors/userselector-api.yaml
+++ b/api-domain/src/main/resources/descriptors/userselector-api.yaml
@@ -52,11 +52,16 @@ components:
         user:
           type: User
           description: The copy of the user object to edit
-        groups:
+        possibleGroups:
+          type: array
+          description: |
+            The list of groups that exist within the current app.
+          items:
+            type: Group
+        actualGroups:
           type: array
           description: |
             The list of groups directly attached to the given user. At the end of the editing the save will ensure that
             these groups will be associated with the user.
           items:
-            type: string
-            format: uri
+            type: Group
