[#11935] current Group/User list in now list of URI

--- a/api-domain/src/main/resources/descriptors/groupselector-api.yaml
+++ b/api-domain/src/main/resources/descriptors/groupselector-api.yaml
@@ -28,4 +28,5 @@ components:
           description: |
             The list of groups that are considered child groups of the group.
           items:
-            type: Group
+            type: string
+            format: uri
