--- a/api-domain/src/main/resources/descriptors/userselector-api.yaml
+++ b/api-domain/src/main/resources/descriptors/userselector-api.yaml
@@ -64,4 +64,5 @@ components:
             The list of groups directly attached to the given user. At the end of the editing the save will ensure that
             these groups will be associated with the user.
           items:
-            type: Group
+            type: string
+            format: uri
