--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -492,3 +492,94 @@ components:
         branchUri:
           type: string
           format: uri
+    ObjectPropertyDescriptor:
+      type: object
+      description: |
+        The object property is the descriptor of a property available for a management.
+      required: [uri, propertyDefinition, builtIn, extension, objectQualifiedName]
+      properties:
+        uri:
+          type: string
+          format: uri
+        propertyDefinition:
+          description: The property definition of the given property.
+          type: PropertyDefinitionData
+        builtIn:
+          description: The built in property can not be deleted (removed).
+          type: boolean
+          default: true
+        extension:
+          description: |
+            The extension property can be used for to construct extended object definition for the objectQualifiedName object. Like
+            we can use the given property to create extended DocumentType.
+          type: boolean
+          default: false
+        objectQualifiedName:
+          description: |
+            The qualified name of object the property belongs to. If it not an extension then we can use it to extend the given object. Otherwise it is the
+            object that owns the given proporty.
+          type: string                   
+    ObjectExtensionDescriptor:
+      type: object
+      description: |
+        The extension descriptor defines the data layout of an object. The properties can be any DocumentProperty available as built in
+        or extension properties. These properties are organized into layouts. The layouts are named to be able to identify the placeholder on the
+        page. The extension contains the constraint and rule definitions for the given object let it be document or folder. 
+      required: [uri, name, layouts, properties]
+      properties:
+        uri:
+          type: string
+          format: uri
+        name:
+          type: string
+          description: |
+            The extension name is a unique and unmodifiable identifier of the given extension. It is used to construct dynamic object
+            definitions so it must match with the requirements of the an object name (ANSI characters with no white spaces)
+        layouts:
+          type: string
+          description: |
+            The layout definition for the object extension. The layouts are identified by their logical placeholder name that helps to identify
+            the position of the given layout on the view.
+          additionalProperties:
+            type: SmartLayoutDefinition
+        properties:
+          type: string
+          description: |
+            The extension refers to included properties via reference but we store the properties mapped by their name to have a quick view about the
+            available properties. If a property is included it appears in this list. If we place it into a layout then it is visible else it is invisible.
+          additionalProperties:
+            type: string
+            format: uri
+        constraints:
+          type: array
+          description: All the constraints that must be enforced the given object.
+          items:
+            $ref: '#/components/schemas/ObjectConstraintDescriptor'
+    ObjectConstraintDescriptor:
+      type: object
+      description: |
+        There can be different kind of constraints and they can be bound to events / related values. The event must be managed by the page or api logic of the given object.
+        The values can be used to identify the situation when the given constraint must be applied.
+      required: [name, layouts, properties]
+      properties:
+        when:
+          enum: [event, condition]
+        condition:
+          type: string
+          description: |
+            The condition to evaluate if the given constraint has to be enforced on the object. It can be a script that can be evaluated based on the extended object.
+        componentConstraints:
+          type: array
+          description: The component constraints in precedence order. They are evaluated in this order so a later constraint can overwrite the previous constraint.
+          items:
+            type: ComponentConstraint
+        actionConstraints:
+          type: array
+          description: The action constraints in precedence order. They are evaluated in this order so a later constraint can overwrite the previous constraint.
+          items:
+            type: UiActionConstraint
+        validationRules:
+          type: array
+          description: The validation rules must be checked before an editing is finalized. The validation result is part of the view. 
+          items:
+            type: string
