[#11715] ObjectApi - include branching operations

--- a/api-domain/src/main/resources/descriptors/collection-api.yaml
+++ b/api-domain/src/main/resources/descriptors/collection-api.yaml
@@ -89,3 +89,6 @@ components:
           type: string
         schema:
           type: string
+        scopeUri:
+          type: string
+          format: uri
