--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -416,7 +416,10 @@ components:
           type: UserActivityLog
         branchedObjects:
           type: object
-          description: The branched objects are identified by the latest URI of the source object.
+          description: |
+            The branched objects are identified by the latest URI of the source object. These are the objects that are modified
+            on the branch. It is important to know them because during the merge their uri references should be replaced with
+            the merged uri of the source branch.
           additionalProperties:
             $ref: '#/components/schemas/BranchedObject'
         newObjects:
@@ -424,17 +427,71 @@ components:
           description: The branched objects are identified by the latest URI of the new branch object.
           additionalProperties:
             $ref: '#/components/schemas/BranchedObject'
+        containerReferences:
+          type: string
+          description: The branched references identified by the unique identifier of the reference.
+          additionalProperties:
+            $ref: '#/components/schemas/BranchedContainerReference'
+    BranchedContainerReference:
+      type: object
+      description: |
+        The branched reference stands for a collection let it be collection api or objet ref / list or map. If we have a reference to
+        a bunch of other objects then we can modify the references on the given branch. A references is alwaysa a copy so retrieving the
+        proper objects on the branch is not a great challenge. But to know how what are the changes on the branch we need to know the
+        reference operations. We can have new, deleted references and a referrred object can be modified also. If the given reference is new
+        then we have to know if it is really a new object on the branch or not. The deleted means nothing from the perspective of the merge and
+        the modification is implemented with a replace even if we refer the version or the latest. The uri of the branched objects is different
+        they are copy of the source.
+      required: [containerType, referenceKind, identifier, deletedObjects]
+      properties:
+        containerType:
+          enum: [COLLECTION, OBJECT]
+        referenceKind:
+          $ref: '#/components/schemas/ReferencePropertyKind'
+        identifier:
+          type: string
+          description: |
+            This identifier looks like a special uri that identifies the references. It can be directly a collection api object that is easy to
+            identify. But it can be URI of an object with the fragment that refers to the referencing container. For example the
+        newObjects:
+          type: object
+          description: |
+            The objects that are new in the given reference. The new can be a modified in the branch! It is new here but we add a reference to this
+            on this branch. 
+          additionalProperties:
+            $ref: '#/components/schemas/BranchedObjectReference'
+        modifiedObjects:
+          type: object
+          description: |
+            The objects that are modiefied in the given reference. These can be modified objects on its own but also it can be a contained object or a value. 
+          additionalProperties:
+            $ref: '#/components/schemas/BranchedObjectReference'
         deletedObjects:
           type: object
           description: |
-            The version uri of the deleted object identified by the latest URI. The version uri is important to
-            be able check if we still have the same version when merging. The deletion on a branch is a global option. 
-            So if we have multiple references to the deleted object then the ObjectApi will hide the deleted object from a 
-            referring list. But we have to make the modification before the merge or during the merge to commit the deletionm of the
-            the given object!
+            The objects that are removed from the given container reference. It is important to know to be able to produce the full list of
+            BranchedObjectEntry. There must be deleted BranchedObjectEntry also. But during the merge the deletion is not a special operation we simply forget the
+            reference.
           additionalProperties:
-            type: string
-            format: uri
+            $ref: '#/components/schemas/BranchedObjectReference'
+    BranchedObjectReference:
+      type: object
+      description: |
+        The branched object reference is a reference to an object. It always has an identifier that is the uri if the object is saved on
+        its own. In case of the contained objects it can be a property of the object and if it is a value as a value then the identifier is 
+        the value itself.
+      required: [containerType, referenceKind, identifier, deletedObjects]
+      properties:
+        identifier:
+          type: string
+          description: The stringified version of the identifier.
+        referenceType:
+          enum: [URI_BASED, CONTAINED_OBJECT, CONTAINED_VALUE]
+        objectAsValue:
+          type: object
+          description: |
+            If the reference is an object then we store the object as is in this value. It is necessary because the object is
+            contained so it is the only way to access a deleted object for example.
     BranchedObject:
       type: object
       description: |
@@ -492,6 +549,7 @@ components:
         branchUri:
           type: string
           format: uri
+
     ObjectPropertyDescriptor:
       type: object
       description: |
